--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
         "dotenv": "^10.0.0",
         "node-fetch": "^2.6.1",
         "telegraf": "^4.3.0",
-        "telegraf-inline-menu": "^6.2.1",
-        "telegraf-session-local": "^2.1.0",
-        "telegraf-stateless-question": "^2.0.1"
+        "telegraf-session-local": "^2.1.0"
     },
     "moduleDirectories": [
         "node_modules",
