--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "private": false,
     "dependencies": {
         "node-fetch": "^2.6.1",
+        "request": "^2.88.2",
         "telegraf": "^4.3.0",
         "telegraf-session-local": "^2.1.0"
     },
