--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "MIT",
     "private": false,
     "dependencies": {
+        "dotenv": "^10.0.0",
         "node-fetch": "^2.6.1",
         "request": "^2.88.2",
         "telegraf": "^4.3.0",
